# qTox

./: .clang-tidy  .gitignore  .restyled.yaml  .travis.yml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  INSTALL.fa.md  INSTALL.md  MAINTAINING.md  README.md  bootstrap.sh  conanfile.py  cspell.config.yaml  docker-compose.yml  vcpkg.json
.ci-scripts/: build-docs.sh  build-gitstats.sh  build-local-qt.sh  build-qtox-macos.sh  deploy-docs.sh  deploy-gitstats.sh  smoke-test.sh  validate-pr.py  verify-commit-format.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug.yaml
.github/actions/build-docker-image/: action.yml
.github/workflows/: build-test-deploy.yaml
.travis/: deploy-install
audio/: BUILD.bazel  CMakeLists.txt  format.md
audio/include/audio/: iaudiosettings.h  iaudiosink.h
audio/resources/: format.md
audio/src/backend/: alsink.cpp  alsink.h  alsource.cpp  alsource.h  openal.cpp  openal.h
audio/test/: audio_test.cpp
cmake/: Dependencies.cmake  Installation.cmake  Testing.cmake
doc/: TCS_state.md  coding_standards.md  user_manual_en.md
flatpak/: build.sh  com.github.TokTok.qTox.json  io.github.TokTok.qTox.json  io.github.qtox.qTox.json  update_flathub_descriptor_dependencies.py
linux/: build-static.sh
macos/: createdmg
osx/: BUILD.bazel  info.plist  qTox-Mac-Deployer-ULTIMATE.sh
osx/updater/: BUILD.bazel  README.md
platform/linux/: io.github.qtox.qTox.appdata.xml
platform/macos/: Info.plist
platform/wasm/: netlify.sh
platform/windows/: qtox64.nsi
res/: com.github.TokTok.qTox.appdata.xml  io.github.TokTok.qTox.appdata.xml  io.github.qtox.qTox.appdata.xml  nodes.json
security/apparmor/: README.md
smileys/: noto.qrc  update_smileys.py
smileys/ASCII+noto/: emoticons.xml
smileys/ASCII-Universe/: README.md
smileys/emojione/: LICENSE.md
src/: BUILD.bazel  appmanager.cpp  appmanager.h  friendlist.cpp  grouplist.cpp  grouplist.h  ipc.cpp  main.cpp  nexus.cpp  nexus.h
src/chatlog/: chatline.cpp  chatline.h  chatlinecontent.h  chatlinecontentproxy.h  chatlog.cpp  chatlog.h  chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  customtextdocument.cpp  customtextdocument.h  documentcache.cpp  pixmapcache.h  textformatter.cpp
src/core/: chatid.cpp  chatid.h  contactid.h  core.cpp  core.h  coreav.cpp  coreav.h  corefile.cpp  corefile.h  dhtserver.cpp  icoresettings.h  toxcall.cpp  toxencrypt.cpp  toxencrypt.h  toxfile.cpp  toxfile.h  toxfileprogress.cpp  toxid.cpp  toxlogger.h  toxoptions.cpp  toxoptions.h  toxpk.cpp  toxpk.h  toxstring.cpp  toxstring.h
src/model/: chat.cpp  chathistory.cpp  chatlogitem.cpp  chatlogitem.h  chatmanager.cpp  chatmanager.h  conference.cpp  conferenceinvite.cpp  conferenceinvite.h  conferencemessagedispatcher.cpp  exiftransform.cpp  friend.cpp  friend.h  friendmessagedispatcher.cpp  friendmessagedispatcher.h  group.cpp  group.h  groupinvite.cpp  groupinvite.h  groupmessagedispatcher.h  ichatlog.h  message.cpp  notificationgenerator.cpp  sessionchatlog.cpp  sessionchatlog.h  status.h  toxclientstandards.h
src/net/: avatarbroadcaster.cpp  bootstrapnodeupdater.cpp  toxuri.cpp  updatecheck.cpp  updatecheck.h
src/persistence/: history.cpp  history.h  ifriendsettings.h  offlinemsgengine.cpp  paths.cpp  paths.h  personalsettingsupgrader.cpp  profile.cpp  profile.h  profilelocker.cpp  settings.cpp  settings.h  settingsserializer.cpp  settingsserializer.h  smileypack.cpp
src/platform/: autorun.h  autorun_osx.cpp  autorun_win.cpp  autorun_xdg.cpp  capslock_osx.cpp  capslock_win.cpp  capslock_x11.cpp  install_osx.cpp  install_osx.h  posixsignalnotifier.cpp  timer_osx.cpp  timer_win.cpp  timer_x11.cpp  x11_display.cpp  x11_display.h
src/video/: cameradevice.cpp  cameradevice.h  camerasource.cpp  corevideosource.cpp  ivideosettings.h  netcamview.cpp  netcamview.h  videoframe.cpp  videoframe.h  videosource.h  videosurface.cpp  videosurface.h
src/widget/: categorywidget.cpp  categorywidget.h  chatformheader.cpp  chatformheader.h  circlewidget.cpp  conferencewidget.cpp  contentdialog.cpp  contentdialogmanager.cpp  contentlayout.cpp  emoticonswidget.cpp  flowlayout.cpp  friendlistlayout.h  friendlistwidget.cpp  friendwidget.cpp  genericchatitemlayout.cpp  genericchatitemlayout.h  genericchatroomwidget.cpp  groupwidget.h  imagepreviewwidget.cpp  imagepreviewwidget.h  loginscreen.cpp  maskablepixmapwidget.cpp  notificationscrollarea.cpp  passwordedit.cpp  qrwidget.cpp  searchform.cpp  searchform.h  searchtypes.h  style.cpp  style.h  translator.cpp  translator.h  widget.cpp  widget.h
test/: BUILD.bazel
test/chatlog/: chatlinestorage_test.cpp
test/core/: chatid_test.cpp  contactid_test.cpp  core_test.cpp  toxstring_test.cpp
test/dbutility/src/: dbutility.cpp
test/model/: conferencemessagedispatcher_test.cpp  exiftransform_fuzz_test.cpp  friendchatstate_test.cpp  friendlistmanager_test.cpp  friendmessagedispatcher_test.cpp  groupmessagedispatcher_test.cpp  messageprocessor_test.cpp  notificationgenerator_test.cpp  sessionchatlog_test.cpp
test/net/: bsu_test.cpp
test/persistence/: dbschema_test.cpp  offlinemsgengine_test.cpp  paths_test.cpp  settings_test.cpp  settingsserializer_test.cpp
test/persistence/dbupgrade/: dbTo11_test.cpp
test/platform/: posixsignalnotifier_test.cpp
test/resources/profile/: qtox-test-user.tox
test/widget/: filesform_test.cpp  loginscreen_test.cpp
tools/: translate.py  update-versions.sh  validate_pr.py
translations/: README.md  ar.ts  be.ts  ber.ts  bg.ts  bn.ts  cs.ts  da.ts  de.ts  el.ts  eo.ts  es.ts  et.ts  fa.ts  fi.ts  fr.ts  gl.ts  he.ts  hr.ts  hu.ts  is.ts  it.ts  ja.ts  jbo.ts  kn.ts  ko.ts  li.ts  lt.ts  lv.ts  mk.ts  nb_NO.ts  nl.ts  nl_BE.ts  no_nb.ts  pl.ts  pr.ts  pt.ts  pt_BR.ts  ro.ts  ru.ts  (+17 more)
util/: BUILD.bazel  CMakeLists.txt
util/src/: interface.cpp  laterdeleter.cpp  strongtype.cpp  toxcoreerrorparser.cpp
windows/: BUILD.bazel  qtox.nsi  qtox.sh  qtox64.nsi
windows/cross-compile/: README.md  build.sh  check-dlls
(+108 files in other folders)
